CHANGES IN VERSION 1.5.6
------------------------
 o change the default value of grid.ppm.from to 2
   (was 5 before) [2014-03-05 Wed]
 o change the separator in GridDetails' names to ":"
   (was "." before) [2014-03-07 Fri]
 o 

CHANGES IN VERSION 1.5.5
------------------------
 o fix a bug in the calculation of non unique matches in gridSearch2 
   (part of searchGrid); results in a higher number of non unique matches 
   (some of the reported -2 will now be reported as 2 in the grid details)
   [2014-03-05 Wed] 
 o partial rewrite of gridSearch2 (part of searchGrid) for faster grid
   calculation [2014-03-04 Tue]

CHANGES IN VERSION 1.5.4
------------------------
 o biocViews update

CHANGES IN VERSION 1.5.3
------------------------
 o modified findMSeEMRTs (part of searchGrid) for faster grid 
   calculation [2014-02-28 Fri]
 o typos in manual [2014-02-25 Tue]
 o replace readFasta by Biostrings::readAAStringSet [2014-02-25 Tue]
 o replace digest by cleaver::cleave [2014-02-25 Tue]

CHANGES IN VERSION 1.5.1
------------------------
 o typo in vignette [2014-02-18 Tue]

CHANGES IN VERSION 1.5.0
------------------------
 o new devel version for Bioc 2.14

CHANGES IN VERSION 1.3.4
------------------------
 o estimateMasterFdr now support list of vector as pepfiles [2013-09-27 Fri]
 o import(MSnbase) [2013-09-27 Fri]

CHANGES IN VERSION 1.3.3
------------------------
 o Updated references. [2013-07-05 Fri]

CHANGES IN VERSION 1.3.2
------------------------
 o fixed bug when using findEMRTs = "copy" [2013-05-30 Thu]

CHANGES IN VERSION 1.3.1
------------------------
 o Reporting total number of peptides in dbUniquePeptideSet.
   Fixes issue #41. [2013-05-13 Mon]
 o New mergedEMRTs arg in findEMRTs. 
   Closes issue #38. [2013-05-13 Mon] 
 o fixed synapterTiny$QuantPep3DData, which had the rownames 
   as first column synapterTiny$QuantPep3DData$X. Detected 
   thanks to new mergedEMRTs arg. [2013-05-13 Mon]
 o added mergedEMRTs arg to synergise [2013-05-22 Wed]