@@ -4,6 +4,7 @@ CHANGES IN VERSION 1.5.6
    (was 5 before) [2014-03-05 Wed]
  o change the separator in GridDetails' names to ":"
    (was "." before) [2014-03-07 Fri]
+ o test for corresponding Pep3D file (closes #42) [2014-03-19 Wed]
  o 
 
 CHANGES IN VERSION 1.5.5
